fix(0.x): align offset off by a couple pixels (#9996)
## Description

Fix active link indicator offset. [Related issue
](https://linear.app/kepler-crm/issue/GRWTH-1087/nested-sidebar-items-have-slightly-misaligned-active-indicator)

## Related Issue(s)

<!-- Link to the issue(s) this PR addresses, using hashtag notation:
#123 -->

## Type of Change

- [x] Bug fix (non-breaking change that fixes an issue)
- [ ] New feature (non-breaking change that adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to change)
- [ ] Documentation update
- [ ] Code refactoring
- [ ] Performance improvement
- [ ] Test update

## Checklist

- [x] I have made corresponding changes to the documentation (if
applicable)
- [ ] I have added tests that prove my fix is effective or that my
feature works

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1262,7 +1262,12 @@ ol {
     border-radius: 8px;
   }
 
-  .theme-doc-sidebar-item-link-level-3,
+  .theme-doc-sidebar-item-link-level-3 {
+    .menu__link--active::before {
+      inset-inline-start: calc(0.25rem * 1);
+    }
+  }
+
   .theme-doc-sidebar-item-link-level-4 {
     .menu__link--active::before {
       inset-inline-start: 0px;
@@ -1320,10 +1325,6 @@ ol {
     margin-block-end: calc(0.25rem * 1.5);
   }
 
-  .theme-doc-sidebar-item-link-level-3 > a {
-    margin-inline-start: -0.25rem;
-  }
-
   .theme-doc-sidebar-item-category-level-2 > .menu__list-item-collapsible {
     margin-inline-start: 0.18rem;
   }
@@ -1332,6 +1333,9 @@ ol {
     &::after {
       right: 16.5%;
     }
+  }
+  .theme-doc-sidebar-item-link-level-3 > a {
+    margin-inline-start: -0.25rem;
   }
 
   .theme-doc-sidebar-item-category-level-3 > .menu__list-item-collapsible a {
